@@ -11,7 +11,7 @@ end
 
 module ParserHelper
   def parse_string (r)
-    PDF::Reader::Parser.new(PDF::Reader::Buffer.new(sio = StringIO.new(r)), nil).string
+    PDF::Reader::Parser.new(PDF::Reader::Buffer.new(sio = StringIO.new(r)), nil)
   end
 end
 
@@ -118,18 +118,25 @@ EOF
   end
 
   specify "should parse a string correctly" do
-    parse_string("this is a string)").should eql("this is a string") 
-    parse_string("this \\n is a string)").should eql("this \n is a string")
-    parse_string("x \\t x)").should eql("x \t x")
-    parse_string("x \\101 x)").should eql("x A x")
-    parse_string("x \\( x)").should eql("x ( x")
-    parse_string("(x)))").should eql("(x)")
+    parse_string("this is a string)").string.should eql("this is a string") 
+    parse_string("this \\n is a string)").string.should eql("this \n is a string")
+    parse_string("x \\t x)").string.should eql("x \t x")
+    parse_string("x \\101 x)").string.should eql("x A x")
+    parse_string("x \\( x)").string.should eql("x ( x")
+    parse_string("(x)))").string.should eql("(x)")
     str = <<EOT
 x
 x \
 x)
 EOT
-    parse_string(str).should eql("x\nx x")
+    parse_string(str).string.should eql("x\nx x")
   end
 
+  specify "should parse a hex string correctly" do
+    parse_string("48656C6C6F>").hex_string.should eql("Hello") 
+  end
+
+  specify "should ignore whitespace when parsing a hex string" do
+    parse_string("48656C6C6F20\n4A616D6573>").hex_string.should eql("Hello James") 
+  end
 end
