@@ -1,8 +1,9 @@
 v0.6.2 (xxx)
-- Switched from using the zlib library bundled with stdlib, to a vendored copy of zliby, a pure ruby implementation
+- Catch low level errors when applying filters to a content stream and raise a MalformedPDFError instead. 
 - Added support for processing inline images
 - Support for parsing XRef tables that have multiple subsections
 - Added a few callbacks to improve the way we supply information on page resources 
+- Ignore whitespace in hex strings, as required by the spec (section 3.2.3)
 
 v0.6.1 (12th March 2008)
 - Tweaked behaviour when we encounter Identity-H encoded text that doesn't have a ToUnicode mapping. We
